// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should renders correctly 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  font-family: themix;
  font-size: 1.4rem;
  color: #ffffff;
  padding: 0.6em 1em;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #ccc15a;
  overflow: hidden;
}

.emotion-0:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  background-color: #aac15a;
  -webkit-transition: width 700ms cubic-bezier(0.1, 0.15, 0, 0.97);
  transition: width 700ms cubic-bezier(0.1, 0.15, 0, 0.97);
}

.emotion-0 span {
  position: relative;
  z-index: 10;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:before {
  width: 100%;
}

@media (min-width: 400px) {
  .emotion-0 {
    font-size: 1.4rem;
  }
}

<a
  className="emotion-0"
  href="http://www.somewhere.com"
>
  <span>
    Link somewhere
  </span>
</a>
`;

exports[`Button component should renders correctly small button 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  font-family: themix;
  font-size: 0.8rem;
  color: #ffffff;
  padding: 0.6em 1em;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #ccc15a;
  overflow: hidden;
}

.emotion-0:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  background-color: #aac15a;
  -webkit-transition: width 700ms cubic-bezier(0.1, 0.15, 0, 0.97);
  transition: width 700ms cubic-bezier(0.1, 0.15, 0, 0.97);
}

.emotion-0 span {
  position: relative;
  z-index: 10;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:before {
  width: 100%;
}

@media (min-width: 400px) {
  .emotion-0 {
    font-size: 1rem;
  }
}

<a
  className="emotion-0"
  href="http://www.somewhere.com"
>
  <span>
    Link somewhere
  </span>
</a>
`;

exports[`Button component should renders correctly with target blank 1`] = `
.emotion-0 {
  position: relative;
  display: inline-block;
  font-family: themix;
  font-size: 1.4rem;
  color: #ffffff;
  padding: 0.6em 1em;
  border-radius: 4px;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #ccc15a;
  overflow: hidden;
}

.emotion-0:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0;
  height: 100%;
  background-color: #aac15a;
  -webkit-transition: width 700ms cubic-bezier(0.1, 0.15, 0, 0.97);
  transition: width 700ms cubic-bezier(0.1, 0.15, 0, 0.97);
}

.emotion-0 span {
  position: relative;
  z-index: 10;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0:hover:before {
  width: 100%;
}

@media (min-width: 400px) {
  .emotion-0 {
    font-size: 1.4rem;
  }
}

<a
  className="emotion-0"
  href="http://www.somewhere.com"
  rel="noreferrer noopener"
  target="_blank"
>
  <span>
    Link somewhere
  </span>
</a>
`;
